--- a/XamarinPruebas/XamarinPruebas/XamarinPruebas/XamarinPruebas.csproj
+++ b/XamarinPruebas/XamarinPruebas/XamarinPruebas/XamarinPruebas.csproj
@@ -14,7 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="MvvmLightLibs" Version="5.3.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.122203" />
   </ItemGroup>
 
