--- a/XamarinPruebas/XamarinPruebas/XamarinPruebas.iOS/XamarinPruebas.iOS.csproj
+++ b/XamarinPruebas/XamarinPruebas/XamarinPruebas.iOS/XamarinPruebas.iOS.csproj
@@ -128,4 +128,7 @@
       <Name>XamarinPruebas</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\cambio.png" />
+  </ItemGroup>
 </Project>
